--- a/initializr-generator/src/main/resources/templates/starter-pom.xml
+++ b/initializr-generator/src/main/resources/templates/starter-pom.xml
@@ -103,8 +103,8 @@
 		</dependency>
 		{{/providedDependencies}}
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
+			<groupId>com.fluig</groupId>
+			<artifactId>fluig-integration-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		{{#testDependencies}}
