--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -30,14 +30,14 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                     <h2>
                         <span class="rwd-line">
                         <label for="type">Generate a</label>
-                        <select tabindex="1" class="form-control" id="type" name="type">
+                        <select  tabindex="1" class="form-control" id="type" name="type" disabled="true">
                             {{#types.content}}
                             <option data-action="{{action}}" value="{{id}}" {{#default}}
                                     selected{{/default}}>{{name}}</option>
                             {{/types.content}}
                         </select>
                         <label for="language">with</label>
-                        <select tabindex="2" class="form-control" name="language" id="language">
+                        <select tabindex="2" class="form-control" name="language" id="language" disabled="true">
                             {{#languages.content}}
                             <option value="{{id}}" {{#default}} selected{{/default}}>{{name}}</option>
                             {{/languages.content}}
@@ -45,7 +45,7 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                         </span>
                         <span class="rwd-line">
                         <label for="bootVersion">and Spring Boot</label>
-                        <select tabindex="3" class="form-control" name="bootVersion" id="bootVersion">
+                        <select tabindex="3" class="form-control" name="bootVersion" id="bootVersion" disabled="true">
                             {{#bootVersions.content}}
                             <option value="{{id}}" {{#default}} selected{{/default}}>{{name}}</option>
                             {{/bootVersions.content}}
@@ -110,12 +110,29 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 <div class="col-sm-12 col-md-6">
                     <h2>Dependencies</h2>
 
-                    <p>Add Spring Boot Starters and dependencies to your application</p>
+                    <p>Select type of project do you need</p>
+
+                    <!-- begin custom stuff
+                    <div class="form-group">
+                        <label for="archetype" class="control-label">Select a Starter Archetype</label>&nbsp;
+                        <select id="archetype" name="archetype">
+                            <option value="FULL_SERVICE">Full Project (jar, war and database)</option>
+                            <option value="CUSTOM">Full Project (jar, war, database)</option>
+                            <option value="APP_WEB_DATA">App Module (Web/Data)</option>
+                            <option value="LIBRARY">Library </option>
+                            <option value="NOTHING">---------</option>
+                            <option value="MICRO">Microservice</option>
+                            <option value="MICRO_DATABASE">Microservice (Database)</option>
+                            <option value="MICRO_KAFKA">Microservice (Kafka)</option>
+                            <option value="NOTHING">---------</option>
+
+                        </select>
+                    </div>-->
 
                     <div class="form-group">
                         <label for="autocomplete" class="control-label">Search for dependencies</label>
                         <input tabindex="11" id="autocomplete" class="form-control" type="text"
-                               placeholder="Web, Security, JPA, Actuator, Devtools..."
+                               placeholder="Web, JPA, SQL, Devtools..."
                                name="autocomplete">
                     </div>
                     <div class="form-group">
@@ -123,6 +140,8 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                         <div id="starters">
                         </div>
                     </div>
+
+
                 </div>
             </div>
             <div class="row hidden tosimpleversion">
