Project generate improvements

--- a/initializr-web/src/main/resources/templates/home.mustache
+++ b/initializr-web/src/main/resources/templates/home.mustache
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Spring Initializr</title>
+    <title>fluig Spring Initializr</title>
     <link href="//fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{#linkTo}}/css/bootstrap.min.css{{/linkTo}}"/>
     <link rel="stylesheet" href="{{#linkTo}}/css/bootstrap-theme.min.css{{/linkTo}}"/>
@@ -21,11 +21,11 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     <div class="container-fluid">
         <div class="row start-header">
             <div class="container">
-                <h1>Spring Initializr <small>bootstrap your application now</small></h1>
+                <h1>fluig Spring Initializr <small>bootstrap your application now</small></h1>
             </div>
         </div>
         <div class="container start-main">
-        <div class="row form-inline text-center hidden">
+        <div class="row form-inline text-center">
                 <div class="form-group project-choice">
                     <h2>
                         <span class="rwd-line">
@@ -129,9 +129,14 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
                 </div>
             </div>
 
+            <div class="row">
+                <p>Need help? <a href="http://tdn.totvs.com/display/TF/Fluig+Next+Generation" target="_blank">Fluig Next Generation</a></p>
+            </div>
+
             <div class="row hidden tosimpleversion">
                 <p>Too many options? <a href="#">Switch back to the simple version.</a></p>
             </div>
+
             <div class="row tofullversion">
                 <p>Don't know what to look for? Want more options? <a href="#">Switch to the full version.</a></p>
             </div>
