--- a/initializr-generator/src/main/resources/templates/starter-pom.xml
+++ b/initializr-generator/src/main/resources/templates/starter-pom.xml
@@ -1,259 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-	<groupId>{{groupId}}</groupId>
-	<artifactId>{{artifactId}}</artifactId>
-	<version>{{version}}</version>
-	<packaging>{{packaging}}</packaging>
+    <groupId>{{groupId}}</groupId>
+    <artifactId>{{artifactId}}-parent</artifactId>
+    <version>{{version}}</version>
+    <packaging>pom</packaging>
 
-	<name>{{name}}</name>
-	<description>{{description}}</description>
+    <name>{{name}}</name>
+    <description>{{description}}</description>
 
-	<parent>
-		<groupId>{{mavenParentGroupId}}</groupId>
-		<artifactId>{{mavenParentArtifactId}}</artifactId>
-		<version>{{mavenParentVersion}}</version>
-		<relativePath/> <!-- lookup parent from repository -->
-	</parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
+        <spring.boot.version>2.0.1.RELEASE</spring.boot.version>
+        <fluig.starter.version>1.0.0-SNAPSHOT</fluig.starter.version>
+    </properties>
 
-	<properties>
-		{{#buildPropertiesMaven}}
-		<{{key}}>{{#value}}{{.}}{{/value}}</{{key}}>
-		{{/buildPropertiesMaven}}
-		{{#buildPropertiesVersions}}
-		<{{key}}>{{#value}}{{.}}{{/value}}</{{key}}>
-		{{/buildPropertiesVersions}}
-	</properties>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.fluig</groupId>
+                <artifactId>fluig-starter-dependencies</artifactId>
+                <version>${fluig.starter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<dependencies>
-		{{#compileDependencies}}
-		<dependency>
-			<groupId>{{groupId}}</groupId>
-			<artifactId>{{artifactId}}</artifactId>
-			{{#version}}
-			<version>{{version}}</version>
-			{{/version}}
-			{{#type}}
-			<type>{{type}}</type>
-			{{/type}}
-		</dependency>
-		{{/compileDependencies}}
-		{{#groovy}}
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy</artifactId>
-		</dependency>
-		{{/groovy}}
-		{{#kotlin}}                                                     
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>{{kotlinStdlibArtifactId}}</artifactId>
-			{{^kotlinSupport}}
-			<version>${kotlin.version}</version>
-			{{/kotlinSupport}}
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-reflect</artifactId>
-			{{^kotlinSupport}}
-			<version>${kotlin.version}</version>
-			{{/kotlinSupport}}
-		</dependency>
-		{{/kotlin}}
+    <modules>
+        <module>{{artifactId}}-impl</module>
+        <module>{{artifactId}}-jar</module>
+        <module>{{artifactId}}-war</module>
+        <module>{{artifactId}}-dbupdate</module>
+    </modules>
 
-		{{#runtimeDependencies}}
-		<dependency>
-			<groupId>{{groupId}}</groupId>
-			<artifactId>{{artifactId}}</artifactId>
-			{{#version}}
-			<version>{{version}}</version>
-			{{/version}}
-			<scope>runtime</scope>
-			{{#type}}
-			<type>{{type}}</type>
-			{{/type}}
-		</dependency>
-		{{/runtimeDependencies}}
-		{{#compileOnlyDependencies}}
-		<dependency>
-			<groupId>{{groupId}}</groupId>
-			<artifactId>{{artifactId}}</artifactId>
-			{{#version}}
-			<version>{{version}}</version>
-			{{/version}}
-			<optional>true</optional>
-			{{#type}}
-			<type>{{type}}</type>
-			{{/type}}
-		</dependency>
-		{{/compileOnlyDependencies}}
-		{{#providedDependencies}}
-		<dependency>
-			<groupId>{{groupId}}</groupId>
-			<artifactId>{{artifactId}}</artifactId>
-			{{#version}}
-			<version>{{version}}</version>
-			{{/version}}
-			<scope>provided</scope>
-			{{#type}}
-			<type>{{type}}</type>
-			{{/type}}
-		</dependency>
-		{{/providedDependencies}}
-		<dependency>
-            <groupId>com.fluig</groupId>
-            <artifactId>fluig-integration-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		{{#testDependencies}}
-		<dependency>
-			<groupId>{{groupId}}</groupId>
-			<artifactId>{{artifactId}}</artifactId>
-			{{#version}}
-			<version>{{version}}</version>
-			{{/version}}
-			<scope>test</scope>
-			{{#type}}
-			<type>{{type}}</type>
-			{{/type}}
-		</dependency>
-		{{/testDependencies}}
-	</dependencies>
-{{#hasBoms}}
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <build.profile.id>dev</build.profile.id>
+                <skip.integration.tests>true</skip.integration.tests>
+                <skip.unit.tests>false</skip.unit.tests>
+            </properties>
+        </profile>
+        <profile>
+            <id>integration-test</id>
+            <properties>
+                <build.profile.id>integration-test</build.profile.id>
+                <skip.integration.tests>false</skip.integration.tests>
+                <skip.unit.tests>true</skip.unit.tests>
+            </properties>
+        </profile>
+    </profiles>
 
-	<dependencyManagement>
-		<dependencies>
-		    {{#resolvedBoms}}
-			<dependency>
-				<groupId>{{groupId}}</groupId>
-				<artifactId>{{artifactId}}</artifactId>
-				<version>{{versionToken}}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			{{/resolvedBoms}}
-		</dependencies>
-	</dependencyManagement>
-{{/hasBoms}}
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
+                <configuration>
+                    <skipTests>${skip.unit.tests}</skipTests>
+                    <excludes>
+                        <exclude>**/IT*.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.21.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                        <configuration>
+                            <!-- https://github.com/spring-projects/spring-boot/issues/6254 -->
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <skipTests>${skip.integration.tests}</skipTests>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 
-	<build>
-		{{#kotlin}}
-		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
-		{{/kotlin}}
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			{{#groovy}}
-			<plugin>
-				<groupId>org.codehaus.gmavenplus</groupId>
-				<artifactId>gmavenplus-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>addSources</goal>
-							<goal>addTestSources</goal>
-							<goal>generateStubs</goal>
-							<goal>compile</goal>
-							<goal>testGenerateStubs</goal>
-							<goal>testCompile</goal>
-							<goal>removeStubs</goal>
-							<goal>removeTestStubs</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			{{/groovy}}
-			{{#kotlin}}
-			<plugin>
-				<artifactId>kotlin-maven-plugin</artifactId>
-				<groupId>org.jetbrains.kotlin</groupId>
-				{{^kotlinSupport}}
-				<version>${kotlin.version}</version>
-				{{/kotlinSupport}}
-				<configuration>
-					<args>
-						<arg>-Xjsr305=strict</arg>
-					</args>
-					<compilerPlugins>
-						<plugin>spring</plugin>
-					</compilerPlugins>
-					{{^kotlinSupport}}
-					{{#java8OrLater}}
-					<jvmTarget>1.8</jvmTarget>
-					{{/java8OrLater}}
-					{{/kotlinSupport}}
-				</configuration>
-				{{^kotlinSupport}}
-				<executions>
-					<execution>
-						<id>compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>test-compile</id>
-						<phase>test-compile</phase>
-						<goals>
-							<goal>test-compile</goal>
-						</goals>
-					</execution>
-				</executions>
-				{{/kotlinSupport}}
-				<dependencies>
-					<dependency>
-						<groupId>org.jetbrains.kotlin</groupId>
-						<artifactId>kotlin-maven-allopen</artifactId>
-						<version>${kotlin.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			{{/kotlin}}
-		</plugins>
-	</build>
-{{#hasRepositories}}
-
-	<repositories>
-		{{#repositoryValues}}
-		<repository>
-			<id>{{key}}</id>
-			<name>{{value.name}}</name>
-			<url>{{value.url}}</url>
-			<snapshots>
-				<enabled>{{value.snapshotsEnabled}}</enabled>
-			</snapshots>
-		</repository>
-		{{/repositoryValues}}
-	</repositories>
-{{/hasRepositories}}
-{{^isRelease}}
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>spring-snapshots</id>
-			<name>Spring Snapshots</name>
-			<url>https://repo.spring.io/snapshot</url>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-		<pluginRepository>
-			<id>spring-milestones</id>
-			<name>Spring Milestones</name>
-			<url>https://repo.spring.io/milestone</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
-{{/isRelease}}
-
+        <finalName>${project.artifactId}</finalName>
+    </build>
 
 </project>
